[gd_scene load_steps=17 format=2]

[ext_resource path="res://Text/Arimo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Text/ArialUnicodeMS.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Dimension/Physics.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Dimension/DimensionalPower.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Dimension/Mathematics.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Dimension/Engineering.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Dimension/Philosophy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Dimension.gd" type="Script" id=8]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=9]
[ext_resource path="res://Scenes/Dimension/Biology.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Dimension/Chemistry.tscn" type="PackedScene" id=12]
[ext_resource path="res://Graphics/Misc/Universe.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 19
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.501961, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Dimension" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 9 )
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 368.0 ],
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 80.0
margin_right = 320.0
margin_bottom = 716.0
rect_min_size = Vector2( 0, 640 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 300.0
margin_bottom = 300.0

[node name="UniverseIcon" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 300.0
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscoveredUnivs" type="Panel" parent="."]
margin_left = -16.0
margin_top = 40.0
margin_right = 330.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DiscoveredUnivs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -20.0
margin_right = 160.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 40 )
text = "DISCOVERED_UNIVERSES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnivInfo" type="Panel" parent="."]
margin_left = 328.0
margin_top = 40.0
margin_right = 800.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UnivInfo"]
margin_left = 8.0
margin_top = 8.0
margin_right = 344.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 800.0
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 1
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer2"]
margin_right = 628.0
margin_bottom = 670.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mathematics" parent="ScrollContainer2/GridContainer" instance=ExtResource( 5 )]
margin_right = 154.0
margin_bottom = 333.0

[node name="Physics" parent="ScrollContainer2/GridContainer" instance=ExtResource( 3 )]
margin_left = 158.0
margin_right = 312.0
margin_bottom = 333.0
mouse_filter = 0
size_flags_vertical = 3

[node name="Chemistry" parent="ScrollContainer2/GridContainer" instance=ExtResource( 12 )]
margin_left = 316.0
margin_right = 470.0
margin_bottom = 333.0
mouse_filter = 0
size_flags_vertical = 3

[node name="Biology" parent="ScrollContainer2/GridContainer" instance=ExtResource( 11 )]
margin_left = 474.0
margin_right = 628.0
margin_bottom = 333.0
mouse_filter = 0
size_flags_vertical = 3

[node name="Philosophy" parent="ScrollContainer2/GridContainer" instance=ExtResource( 7 )]
margin_top = 337.0
margin_right = 154.0
margin_bottom = 670.0
mouse_filter = 0
size_flags_vertical = 3

[node name="Engineering" parent="ScrollContainer2/GridContainer" instance=ExtResource( 6 )]
margin_left = 158.0
margin_top = 337.0
margin_right = 312.0
margin_bottom = 670.0
mouse_filter = 0
size_flags_vertical = 3

[node name="DimensionalPower" parent="ScrollContainer2/GridContainer" instance=ExtResource( 4 )]
margin_left = 316.0
margin_top = 337.0
margin_right = 470.0
margin_bottom = 670.0
mouse_filter = 0
size_flags_vertical = 3

[node name="TopInfo" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -680.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimensionN" type="Label" parent="TopInfo"]
margin_left = 16.0
margin_right = 1279.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DRs" type="Label" parent="TopInfo"]
margin_left = 2.0
margin_top = 9.0
margin_right = 1278.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Dimension remnants (DRs): 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="TopInfo"]
margin_left = 1119.0
margin_right = 1264.0
margin_bottom = 40.0
grow_horizontal = 0
text = "New dimension"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendProbes" type="Button" parent="."]
margin_left = 52.0
margin_top = 688.0
margin_right = 276.0
margin_bottom = 724.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "SEND_PROBES"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SendProbes" to="." method="_on_SendProbes_pressed"]
